crates/pg_syntax/tests/snapshots/postgres_regress/regproc@77.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_regrole('\"Nonexistent\"');"
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..33
    FuncCall@7..33
      Ident@7..17 "to_regrole"
      Ascii40@17..18 "("
      AConst@18..33
        Sconst@18..33 "'\"Nonexistent\"'"
  Ascii41@33..34 ")"
  Ascii59@34..35 ";"

