crates/pg_syntax/tests/snapshots/postgres_regress/regproc@8.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT regcollation('\"POSIX\"');"
---
SelectStmt@0..31
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..29
    FuncCall@7..29
      Ident@7..19 "regcollation"
      Ascii40@19..20 "("
      AConst@20..29
        Sconst@20..29 "'\"POSIX\"'"
  Ascii41@29..30 ")"
  Ascii59@30..31 ";"

