crates/pg_syntax/tests/snapshots/postgres_regress/regproc@80.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_regnamespace('\"Nonexistent\"');"
---
SelectStmt@0..40
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..38
    FuncCall@7..38
      Ident@7..22 "to_regnamespace"
      Ascii40@22..23 "("
      AConst@23..38
        Sconst@23..38 "'\"Nonexistent\"'"
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

