crates/pg_syntax/tests/snapshots/postgres_regress/returning@32.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO voo VALUES(11,'zit');"
---
InsertStmt@0..33
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "voo"
  Whitespace@15..16 " "
  SelectStmt@16..31
    Values@16..22 "VALUES"
    Ascii40@22..23 "("
    List@23..31
      AConst@23..25
        Iconst@23..25 "11"
      Ascii44@25..26 ","
      AConst@26..31
        Sconst@26..31 "'zit'"
  Ascii41@31..32 ")"
  Ascii59@32..33 ";"

