crates/pg_syntax/tests/snapshots/postgres_regress/returning@46.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: DELETE FROM foo WHERE f1 = 13;
---
DeleteStmt@0..30
  DeleteP@0..6 "DELETE"
  Whitespace@6..7 " "
  From@7..11 "FROM"
  Whitespace@11..12 " "
  RangeVar@12..15
    Ident@12..15 "foo"
  Whitespace@15..16 " "
  Where@16..21 "WHERE"
  Whitespace@21..22 " "
  AExpr@22..29
    ColumnRef@22..24
      Ident@22..24 "f1"
    Whitespace@24..25 " "
    Ascii61@25..26 "="
    Whitespace@26..27 " "
    AConst@27..29
      Iconst@27..29 "13"
  Ascii59@29..30 ";"

